Ajustes en la vista reservados y añadir boton de añadir regalo en show

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -678,7 +678,7 @@ sm {
   }
 }
 
-.lista-fiestas, .lista-compromisos {
+.lista-fiestas, {
   border-bottom: 1px dotted rgba(0, 0, 0, 0.5);
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   border-bottom: 1px dotted #eee;
