--- a/app/views/listas/show.html.erb
+++ b/app/views/listas/show.html.erb
@@ -34,6 +34,9 @@
   <div class="row text-center">
 
      <div class="btn-group">
+      <% if policy(@lista).update? %>
+        <%= link_to "Añade un regalo", new_fiesta_lista_regalo_path(@fiesta, @lista), class: "btn btn-primary" %>
+      <% end %>
       <%= link_to fiesta_lista_regalos_path(@fiesta, @lista), class: "btn btn-success"  do %>
       <i class="glyphicon glyphicon-th-list"></i> lista unificada de regalos
       <% end %>
