Añadir foto de Cover

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -525,9 +525,9 @@ margin-top: 15px;
 
 /* Section Dividers Backgrounds */
 
-.divider1 {
-  background-image: url(divider1.jpg);
-}
+// .divider1 {
+//   background-image: url(divider1.jpg);
+// }
 
 /* Background overlay */
 
