--- a/app/views/convidado_mailer/nuevo_usuario_convidado.html.erb
+++ b/app/views/convidado_mailer/nuevo_usuario_convidado.html.erb
@@ -15,9 +15,7 @@
     <p>Espero que te facilite la vida esta nueva aplicación.</p>
 
     <p>Un abrazo,</p>
-    <p><strong>Gabo Sarmiento</strong></p>
-    <p>Creador</p>
+    <p><strong>Equipo Fundador</strong></p>
     <p><%= link_to 'lalistaderegalos.co', "http://lalistaderegalos.co" %></p>
-
   </body>
 </html>
