--- a/app/views/convidado_mailer/nuevo_usuario_convidado.text.erb
+++ b/app/views/convidado_mailer/nuevo_usuario_convidado.text.erb
@@ -11,6 +11,5 @@ Espero que te facilite la vida esta nueva aplicación.
 
 Un abrazo, 
 
-Gabo Sarmiento
-Creador 
+Equipo Fundador
 http://lalistaderegalos.co
