--- a/app/views/regalos/_controles.html.erb
+++ b/app/views/regalos/_controles.html.erb
@@ -15,7 +15,7 @@
     <small>Si cambiaste de parecer libéralo</small>
     <span>
       <%= link_to fiesta_lista_regalo_liberar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-success btn-md", data: {toggle: "tooltip", placement: "top"}, title: "Cancelará tu reserva y olverá a estar disponible en la lista de regalos", id: "liberado" do %>
-      <i class="fa fa-unlock"></i> Liberarlo
+      <i class="fa fa-unlock"></i> Libéralo
       <% end %>
     </span>
     <% else %>
